data/derived/comb/progs/unify/prog8552.ml.out
Characters 152-155:
  | Sine sin -> Printf.printf ("sin(pi*%s"^ sin ^")" );
                                            ^^^
Error: This expression has type expr but an expression was expected of type
         string
